Fix OverFlow

--- a/Spidermen_Page/css/home-page.style.css
+++ b/Spidermen_Page/css/home-page.style.css
@@ -7,7 +7,7 @@ body::before{
     content: '';
     background-image: url('../imagens/spider-man-background.png');
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     opacity: .1;
     z-index: -1;
@@ -67,6 +67,7 @@ body{
 }
 .card-hovered{
     width: 100%;
+    overflow: hidden;
     
 }
 .card-hovered .card_image{
